# lightssl

./: .clang-format  .clang-format-ignore  .gitignore  CMakeLists.txt  CODING.md  LICENSE.md  README.md  build.sh  build_vsh.sh  build_your_project.sh  meson.build
.github/workflows/: build.yml  c-cpp.yml
auspicatus577/src/: lightaes.h  lighthash.c  lighthash.h  lightkeys.c
auspicatus577/src/examples/: example.c
auspicatus577/src/rewrite/: .gitignore
auspicatus577/src/tests/: Makefile  tests.c
example/: build_your_project.sh  example.c  gen_cert.sh
lightssl/src/: lightciphers.c  lightciphers.h  lighthash.h  lighttools.h
lightssl/src/lightcrypto/: lightcrypto_client.py  lightcrypto_server.py
lightssl/src/tests/: Makefile
lotorssl/src/: Makefile  ciph.c  ciph.h  cryp.c  cryp.h  definitions.h  hash.c  hash.h  keys.c  keys.h  lighthash.c  lighthash.h  tool.c  tool.h
lotorssl/src/examples/: build_your_project.sh
lotorssl/src/rewrite/lotorssl/src/: Makefile  ecc.c  ecc.h  ecdsa.c  ecdsa.h
lotorssl/src/rewrite/lotorssl/src/tests/: Makefile  tests.c
lotorssl/src/scripts/: gen_cert_release.sh
lotorssl/src/tests/: Makefile  tests.c
src/: Makefile  defs.c  defs.h  fips202.c  fips202.h  lightaes.c  lightaes.h  lightbig.c  lightbig.h  lightciphers.c  lightciphers.h  lightcrypt.c  lightcrypt.h  lightcrypto.c  lightcrypto.h  lightdefs.c  lightdefs.h  lighthash.c  lighthash.h  lighthash0.c  lighthash0.h  lighthash3.c  lighthash3.h  lightkeys.c  lightkeys.h  lightkeys_defs.h  lightssl.c  lightssl.h  lighttools.c  lighttools.h  lightvsh.c  lightvsh.h  test_lightssl.c  test_lightssl.h  vsh.c  vsh.h  vsh_cli.c  vsh_defs.h  vsh_srv.c
src/example/: build_your_project.sh  example.c  gen_cert.sh
src/hash/: constants.h  hmac.c  lighthash.c  lighthash.h  lightssl.c  lightssl.h  sha.c  sha.h  test_const.h  test_lighthash.c  test_lightssl.c  test_sha.c
src/lightcrypto/: README.md  lightcrypto_client.py
src/python/: client.py  ecdhe.py  helper.py  server.py  shake.py  shake_srv.py  shake_test.py  srv.py  test_shake.py  vsh.py  vsh_client.py  vsh_server.py
src/rewrite/: .gitignore
src/rewrite/lightssl/src/: ecc.c  ecc.h
src/rewrite/lightssl/src/.build/: tests
src/rewrite/lightssl/src/tests/: Makefile  tests.c
src/scripts/: build.sh  gen_cert_cnf.sh  gen_cert_debug.sh  gen_cert_release.sh
src/tests/: Makefile  README.md  test_fips202.c  test_lightaes.c  test_lightciphers.c  test_lightciphers_cbc.c  test_lightciphers_cfb.c  test_lightcrypto.c  test_lightcrypto_cli.c  test_lightcrypto_srv.c  test_lighthash.c  test_lighthash3.c  test_lighthash3_big.c  test_lighthash3_shake.c  test_lighthash3_shake_big.c  test_lighthash3_shake_ref.c  test_lighthash_hmac0.c  test_lighthash_hmac1.c  test_lighthash_hmac2.c  test_lighthash_hmac3.c  test_lighthash_hmac4.c  test_lighthash_sha0.c  test_lighthash_sha1.c  test_lighthash_sha2.c  test_lighthash_sha3.c  test_lighthash_sha4.c  test_lightkeys.c  test_lightkeys_make.c  test_lightkeys_secr.c  test_lightkeys_sign.c  test_lightkeys_vrfy.c  test_lightkeys_write.c  tests.c
src/vsh/: README.md  build_vsh.sh  vsh.c  vsh.h  vsh_cli.c  vsh_client.py  vsh_defs.h  vsh_server.py  vsh_srv.c
src/vsh/python/: vsh.py  vsh_client.py
